src/app/moraleassistant/home-page/home-page.component.scss
@import '../../../styles.scss';

.morale-assistant {
    width: 100%;
    height: 100%;

    .credits {
        color: $text;
        padding-bottom: 1em;

        img {
            height: 1em;
        }
    }
}

h1, p {
    color: $text;
    font-family: 'Nunito', sans-serif;
    -webkit-font-smoothing: antialiased;
    -moz-osx-font-smoothing: grayscale;
}

h1 {
    margin-bottom: 1rem;
    font-size: 3rem;
    padding: 20px;
    width: 700px;
}

.site-wrap {
    max-width: 700px;
    // margin: 0 auto;
    padding: 1rem 1rem;
}

.the-blinking-dot {
    animation: blinker 1.5s linear infinite;
    padding-left: 0.25em;
  }
  
  @keyframes blinker {
    50% {
      opacity: 0;
    }
  }

